build: enable native access for JVM tests